tests/expectations/compiler/core/algorithms/integers/sha3_512/sha3_512_hash_to_i128.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:23
     |
  28 |         let a: i128 = SHA3_512::hash_to_i128(addr_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:23
     |
  29 |         let b: i128 = SHA3_512::hash_to_i128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:23
     |
  30 |         let c: i128 = SHA3_512::hash_to_i128(field_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:23
     |
  31 |         let d: i128 = SHA3_512::hash_to_i128(group_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:23
     |
  32 |         let e: i128 = SHA3_512::hash_to_i128(i8_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:23
     |
  33 |         let f: i128 = SHA3_512::hash_to_i128(i16_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:23
     |
  34 |         let g: i128 = SHA3_512::hash_to_i128(i32_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:23
     |
  35 |         let h: i128 = SHA3_512::hash_to_i128(i64_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:23
     |
  36 |         let i: i128 = SHA3_512::hash_to_i128(i128_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:23
     |
  37 |         let j: i128 = SHA3_512::hash_to_i128(u8_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:23
     |
  38 |         let k: i128 = SHA3_512::hash_to_i128(u16_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:23
     |
  39 |         let l: i128 = SHA3_512::hash_to_i128(u32_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:23
     |
  40 |         let m: i128 = SHA3_512::hash_to_i128(u64_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:23
     |
  41 |         let n: i128 = SHA3_512::hash_to_i128(u128_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:23
     |
  42 |         let o: i128 = SHA3_512::hash_to_i128(scalar_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:23
     |
  44 |         let q: i128 = SHA3_512::hash_to_i128(Foo { a: 1u128, b: 1u128 });
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
